--- a/references.bib
+++ b/references.bib
@@ -58,3 +58,41 @@
 	url = {http://dx.doi.org/10.1073/pnas.2311219120},
 	langid = {en}
 }
+
+@misc{Benegas2024,
+	title = {GPN-MSA: an alignment-based DNA language model for genome-wide variant effect prediction},
+	author = {Benegas, Gonzalo and Albors, Carlos and Aw, Alan J. and Ye, Chengzhong and Song, Yun S.},
+	year = {2023},
+	month = {10},
+	date = {2023-10-11},
+	url = {http://dx.doi.org/10.1101/2023.10.10.561776}
+}
+
+@article{Lupo2022,
+	title = {Protein language models trained on multiple sequence alignments learn phylogenetic relationships},
+	author = {Lupo, Umberto and Sgarbossa, Damiano and Bitbol, Anne-Florence},
+	year = {2022},
+	month = {10},
+	date = {2022-10-22},
+	journal = {Nature Communications},
+	volume = {13},
+	number = {1},
+	doi = {10.1038/s41467-022-34032-y},
+	url = {http://dx.doi.org/10.1038/s41467-022-34032-y},
+	langid = {en}
+}
+
+@article{jumper2021,
+	title = {Highly accurate protein structure prediction with AlphaFold},
+	author = {Jumper, John and Evans, Richard and Pritzel, Alexander and Green, Tim and Figurnov, Michael and Ronneberger, Olaf and Tunyasuvunakool, Kathryn and Bates, Russ and {{\v{Z}}ídek}, Augustin and Potapenko, Anna and Bridgland, Alex and Meyer, Clemens and Kohl, Simon A. A. and Ballard, Andrew J. and Cowie, Andrew and Romera-Paredes, Bernardino and Nikolov, Stanislav and Jain, Rishub and Adler, Jonas and Back, Trevor and Petersen, Stig and Reiman, David and Clancy, Ellen and Zielinski, Michal and Steinegger, Martin and Pacholska, Michalina and Berghammer, Tamas and Bodenstein, Sebastian and Silver, David and Vinyals, Oriol and Senior, Andrew W. and Kavukcuoglu, Koray and Kohli, Pushmeet and Hassabis, Demis},
+	year = {2021},
+	month = {07},
+	date = {2021-07-15},
+	journal = {Nature},
+	pages = {583--589},
+	volume = {596},
+	number = {7873},
+	doi = {10.1038/s41586-021-03819-2},
+	url = {http://dx.doi.org/10.1038/s41586-021-03819-2},
+	langid = {en}
+}
