--- a/references.bib
+++ b/references.bib
@@ -96,3 +96,33 @@
 	url = {http://dx.doi.org/10.1038/s41586-021-03819-2},
 	langid = {en}
 }
+
+@article{brisbin2019,
+	title = {The Deletion-Insertion model applied to the genome rearrangement problem},
+	author = {Brisbin, Abra and Riehl, Manda and Williams, Noah},
+	year = {2019},
+	month = {10},
+	date = {2019-10-01},
+	journal = {Pure Mathematics and Applications},
+	pages = {1--13},
+	volume = {28},
+	number = {1},
+	doi = {10.1515/puma-2015-0030},
+	url = {http://dx.doi.org/10.1515/puma-2015-0030},
+	langid = {en}
+}
+
+@article{initial2002,
+	title = {Initial sequencing and comparative analysis of the mouse genome},
+	author = {, },
+	year = {2002},
+	month = {12},
+	date = {2002-12},
+	journal = {Nature},
+	pages = {520--562},
+	volume = {420},
+	number = {6915},
+	doi = {10.1038/nature01262},
+	url = {http://dx.doi.org/10.1038/nature01262},
+	langid = {en}
+}
