--- a/index.qmd
+++ b/index.qmd
@@ -4,8 +4,12 @@ These are my study notes on training DNA/RNA/Protein and other biomedical langua
 
 At all times I'll try to add minimal biological context (though I am no biologist!) for people who have an ML background but no college bio experience and ill try to add context on ML concepts for those with a bio background but limited experience with language models.
 
+## The times we live in.
+
+More than natural language models biologial/sequence language models rely heavily on NIH funded databases, datasets, resources and scientits. The data we train on was bought and payd for by taxpayers all over the globe. The Human Genome Project was to a great extend funded, directed and conceived under the auspice of the US federal government, under both Democratic and Republican presidents. Had they not, pharmasuitical companies might have done it, and while thoes can be highly innovative there would  have been no space for startups, no space for Google Deep-mind to come in and itterate, revolutionize or grow biological modeling. There is nu uproar over trainign data in biology because under the firm guidance of US federal policy all the data sequencers generate is generally in the public domain, ar accessible for those willing and able to meet ethical standards. All scientits readign this know this, should you find yourself as someone from silicon valley, from a well funded startup even, take a beat and think through whether you'd stand a snowballs chance in hell to compete if the next wave of sequence data isnt public but generated inside google/microsoft/pharma. Then adjust your politics accordingly.
+
 ## Acknowledgements
 
-These notes are written by me, Michel Nivard, a professor of Epidemiology at the University of Bristol, and as this book is not a core outputs for my job, I rely heavily on LLMs to help me with spelling and formatting.
+These notes are written by me, Michel Nivard, a professor of Epidemiology at the University of Bristol, and as this book is not a core outputs for my job, I rely on LLMs to help me with drafting, spelling and formatting.
 
-These study notes are influences by discussion with Robbee Wedow and Seyedeh Zahra Paylakhi with whom I work on relate projects.
+These study notes are influences by discussion with Robbee Wedow and Seyedeh Zahra Paylakhi with whom I work on related projects.
